# PokeDex-TCG-Pro

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9442463364c2_phase_1_initial_schema_users_sets_cards_.py  b3a30871e156_phase_3_prices_table.py
backend/app/: config.py  database.py  dependencies.py  main.py  security.py
backend/app/models/: __init__.py  base.py  card.py  collection_item.py  price.py  set.py  user.py
backend/app/routers/: auth.py  cards.py  collection.py  grading.py  scan.py  sets.py
backend/app/schemas/: auth.py  card.py  collection.py  grading.py  scan.py
backend/app/services/: auth_service.py  card_service.py  collection_service.py  grading_service.py  scan_service.py
backend/tests/: conftest.py  test_auth.py  test_cards.py  test_collection.py  test_etl_parsers.py  test_grading.py  test_scan.py
docs/: architecture.md
etl/: build_scan_index.py  parsers.py  pokemontcg_client.py  sync_cards.py  sync_prices.py
mobile/: README.md  analysis_options.yaml  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/core/: router.dart  theme.dart
mobile/lib/core/api/: api_client.dart
mobile/lib/core/storage/: token_storage.dart
mobile/lib/core/widgets/: holo.dart
mobile/test/: helpers.dart
mobile/web/: index.html  manifest.json
scripts/: daily_price_sync.ps1  sync_common.ps1  weekly_catalog_sync.ps1
(+49 files in other folders)
